# rtz

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile.toml  README.md  benchmark.yml  fly.toml  rust-toolchain.toml  wasmer.toml
.claude/skills/update-data/: SKILL.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
assets/: 100km_cache.bincode  100km_cache.json  ne_10m_time_zones.bincode  ne_time_zone_cache.bincode  ne_time_zone_lookup.bincode  ned_10m_time_zones.bincode  ned_time_zone_lookup.bincode  ned_time_zones.bincode  old_100km_cache.json  osm_admin_lookup.bincode  osm_admins.bincode  osm_time_zone_cache.bincode  osm_time_zone_lookup.bincode
docker/: Dockerfile  app.entrypoint.sh
docs/superpowers/plans/: 2026-07-14-coverage-and-tooling.md  2026-07-15-data-update-pipeline.md  2026-07-15-dependency-bumps.md
docs/superpowers/specs/: 2026-07-14-coverage-and-tooling-design.md
rtz/: Cargo.toml  build.rs
rtz-build/: Cargo.toml
rtz-build/src/: lib.rs
rtz-core/: Cargo.toml
rtz-core/src/: lib.rs
rtz-core/src/base/: mod.rs  types.rs
rtz-core/src/geo/: mod.rs  shared.rs
rtz-core/src/geo/admin/: mod.rs  osm.rs  shared.rs
rtz-core/src/geo/tz/: mod.rs  ned.rs  osm.rs  shared.rs
rtz-core/tests/: ingestion.rs
rtz/assets/: ned_time_zone_lookup.bincode  ned_time_zones.bincode  osm_admin_lookup.bincode  osm_time_zone_lookup.bincode
rtz/benches/: benches.rs
rtz/src/: bin.rs  lib.rs  shared.rs  wasm.rs
rtz/src/geo/: mod.rs  shared.rs
rtz/src/geo/admin/: mod.rs  osm.rs  shared.rs
rtz/src/geo/tz/: mod.rs  ned.rs  osm.rs  shared.rs
rtz/src/web/: config.rs  mod.rs  response_types.rs  server.rs  telemetry.rs  types.rs  utilities.rs
rtz/tests/: cli.rs
src/: bin.rs  lib.rs  main.rs  wasm.rs
src/base/: geo.rs  mod.rs  types.rs
src/web/: config.rs  mod.rs  server.rs  types.rs
test/: ne_10m_time_zones.test.geojson
xtask/: Cargo.toml
xtask/src/: main.rs
