[workspace]
members = ["rtz-core", "rtz"]

# These sections allow for the build steps to be optimized.
# The build steps often generate the buncode caches, and
# we want that to be fast.

[profile.dev.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.test.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false