[package]
name = "rtz-build"
version = "0.2.6"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "The build crate for `rtz`."
readme = "../README.md"
homepage = "https://github.com/twitchax/rtz"
repository = "https://github.com/twitchax/rtz"
keywords = ["cli", "time", "zone", "timezone"]
categories = ["command-line-utilities"]

[features]
default = []
full = ["tz-ned", "tz-osm", "admin-osm", "self-contained", "rtz-core/full"]

force-rebuild = []
self-contained = ["rtz-core/self-contained"]

tz-ned = []
tz-osm = []
admin-osm = []

[dependencies]
rtz-core = { path = "../rtz-core", version = "0.1.4" }