[package]
name = "rtz-build"
version = "0.2.9"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "The build crate for `rtz`."
readme = "../README.md"
homepage = "https://github.com/twitchax/rtz"
repository = "https://github.com/twitchax/rtz"
keywords = ["cli", "time", "zone", "timezone"]
categories = ["command-line-utilities"]

# `coverage_nightly` is set by `cargo llvm-cov` on nightly; keep it a known cfg on stable builds.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = []
full = ["tz-ned", "tz-osm", "admin-osm", "self-contained", "rtz-core/full"]

force-rebuild = []
double-precision = ["rtz-core/double-precision"]
unsimplified = ["rtz-core/unsimplified"]
extrasimplified = ["rtz-core/extrasimplified"]
self-contained = ["rtz-core/self-contained"]

tz-ned = ["rtz-core/tz-ned"]
tz-osm = ["rtz-core/tz-osm"]
admin-osm = ["rtz-core/admin-osm"]

[dependencies]
rtz-core = { path = "../rtz-core", version = "0.1.6" }