[package]
name = "rtz-core"
version = "0.1.3"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "The core functionality for `rtz`."
readme = "../README.md"
homepage = "https://github.com/twitchax/rtz"
repository = "https://github.com/twitchax/rtz"
keywords = ["cli", "time", "zone", "timezone"]
categories = ["command-line-utilities"]

[features]
default = []
full = ["tz-ned", "tz-osm", "admin-osm", "self-contained"]

double-precision = []
unsimplified = []
extrasimplified = []
self-contained = ["bincode"]

tz-ned = []
tz-osm = []
admin-osm = []

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }

rayon = "1.7.0"

geojson = "0.24.1"
geo = "0.26.0"

chashmap = "2.2.2"

serde = { version = "1.0.126" }
serde_json = "1.0.64"

# self-contained
bincode = { version = "2.0.0-rc.3", git = "https://github.com/bincode-org/bincode.git", default-features = false, optional = true, features = ["alloc", "serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
zip = { version = "0.6.6" }

[dev-dependencies]
pretty_assertions = "1.4.0"