[package]
name = "rtz-core"
version = "0.1.6"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "The core functionality for `rtz`."
readme = "../README.md"
homepage = "https://github.com/twitchax/rtz"
repository = "https://github.com/twitchax/rtz"
keywords = ["cli", "time", "zone", "timezone"]
categories = ["command-line-utilities"]

# `wasm` is set by rtz's build script; `coverage_nightly` is set by `cargo llvm-cov` on nightly.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm)', 'cfg(coverage_nightly)'] }

[features]
default = []
full = ["tz-ned", "tz-osm", "admin-osm", "self-contained"]

double-precision = []
unsimplified = []
extrasimplified = []
self-contained = ["bincode"]

tz-ned = []
tz-osm = []
admin-osm = []

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }

rayon = "1"

geojson = "1"
geo = "0.33"

chashmap = "2"

serde = { version = "1" }
serde_json = "1"

# self-contained
bincode = { version = "2", default-features = false, optional = true, features = ["std", "alloc", "serde", "derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
zip = { version = "8" }

[dev-dependencies]
pretty_assertions = "1"