[package]
name = "rtz"
version = "0.6.0"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "A tool to easily work with geo lookups via a binary, a library, or a server."
readme = "../README.md"
homepage = "https://github.com/twitchax/rtz"
repository = "https://github.com/twitchax/rtz"
keywords = ["cli", "time", "zone", "timezone", "geospatial"]
categories = ["command-line-utilities"]

[package.metadata."docs.rs"]
features = ["tz-ned", "tz-osm", "admin-osm"]

[lib]
name = "rtzlib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rtz"
path = "src/bin.rs"
required-features = ["cli"]

[features]
default = ["cli"]
full = ["tz-ned", "tz-osm", "admin-osm", "self-contained", "rtz-core/full", "rtz-build/full"]

double-precision = ["rtz-core/double-precision"]
unsimplified = ["rtz-core/unsimplified"]
extrasimplified = ["rtz-core/extrasimplified"]
self-contained = ["rtz-core/self-contained", "rtz-build/self-contained"]
owned-decode = []

tz-ned = ["rtz-core/tz-ned", "rtz-build/tz-ned"]
tz-osm = ["rtz-core/tz-osm", "rtz-build/tz-osm", "chrono-tz", "chrono"]
admin-osm = ["rtz-core/admin-osm", "rtz-build/admin-osm"]

cli = ["clap"]
web = ["full", "tokio", "config", "log", "simple_logger", "schemars", "chrono", "axum", "hyper", "tower", "tower-http", "utoipa", "utoipa-swagger-ui", "utoipa-redoc", "utoipa-rapidoc", "axum-insights", "tracing"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "wee_alloc", "js-sys"]

[dependencies]
rtz-core = { path = "../rtz-core", version = "0.1.4"}

anyhow = { version = "1.0.72", features = ["backtrace"] }
rayon = "1.7.0"
geojson = "0.24.1"
geo = "0.26.0"
chashmap = "2.2.2"
async-trait = "0.1.71"

rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

serde = { version = "1.0.126" }
serde_json = "1.0.64"

bincode = { version = "2.0.0-rc.3", git = "https://github.com/bincode-org/bincode.git", default-features = false, features = ["alloc", "serde"] }

# cli
clap = { version = "4.0.29", features = ["derive"], optional = true }

# tz-osm
chrono-tz ={ version = "0.8.3", features = ["serde"], optional = true }
chrono = { version = "0.4.19", features = ["serde"], optional = true }

# web
tokio = { version = "1.29.1", features = ["rt", "macros", "signal", "parking_lot"], optional = true }
config = { version = "0.13.3", optional = true }
log = { version = "0.4.8", features = ["release_max_level_info"], optional = true }
simple_logger = { version = "4.2.0", optional = true }
schemars = { version = "0.8.6", features = ["chrono"], optional = true }
axum = { version = "0.6.20", features = ["macros"], optional = true }
hyper = { version = "0.14.27", features = ["full"], optional = true }
tower = { version = "0.4.13", features = ["full"], optional = true }
tower-http = { version = "0.4.3", features = ["full"], optional = true }
utoipa = { version = "3.5.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"], optional = true }
utoipa-redoc = { version = "0.1.0", features = ["axum"], optional = true }
utoipa-rapidoc = { version = "0.1.0", features = ["axum"], optional = true }

# telemetry
# axum-insights = { path="../../axum-insights", version = "0.2.2", optional = true }
axum-insights = { version = "0.3.1", optional = true }
tracing = { version = "0.1.40", optional = true }

# wasm
wasm-bindgen = { version = "0.2.84", optional = true }
wasm-bindgen-futures = { version = "0.4.34", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = { version = "0.3.61", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
cities-json = "*"
futures = "0.3.28"

[build-dependencies]
rtz-build = { path = "../rtz-build", version = "0.2.6"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
zip = { version = "0.6.6" }