[package]
name = "rtz"
version = "0.7.3"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "A tool to easily work with geo lookups via a binary, a library, or a server."
readme = "../README.md"
homepage = "https://github.com/twitchax/rtz"
repository = "https://github.com/twitchax/rtz"
keywords = ["cli", "time", "zone", "timezone", "geospatial"]
categories = ["command-line-utilities"]
# The MSRV we pin and test against (`rust-toolchain.toml`). Coverage additionally needs nightly
# for `#[coverage(off)]`, but building, testing, and `cargo install rtz` all work on stable.
rust-version = "1.93"
# The NED bincodes ship in the package so `self-contained` builds are truly
# self-contained (no download / regeneration in the build script). The OSM
# bincodes are far too large for crates.io (~57 MB), so those are still
# generated at build time when the corresponding features are enabled.
exclude = ["assets/osm_*"]

[package.metadata."docs.rs"]
features = ["tz-ned", "tz-osm", "admin-osm"]

[lib]
name = "rtzlib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rtz"
path = "src/bin.rs"
required-features = ["cli"]

[features]
default = ["cli"]
full = ["tz-ned", "tz-osm", "admin-osm", "self-contained", "rtz-core/full", "rtz-build/full"]

double-precision = ["rtz-core/double-precision", "rtz-build/double-precision"]
unsimplified = ["rtz-core/unsimplified", "rtz-build/unsimplified"]
extrasimplified = ["rtz-core/extrasimplified", "rtz-build/extrasimplified"]
self-contained = ["rtz-core/self-contained", "rtz-build/self-contained", "include_bytes_aligned"]
owned-decode = []

tz-ned = ["rtz-core/tz-ned", "rtz-build/tz-ned"]
tz-osm = ["rtz-core/tz-osm", "rtz-build/tz-osm", "chrono-tz", "chrono"]
admin-osm = ["rtz-core/admin-osm", "rtz-build/admin-osm"]

cli = ["clap"]
web = ["full", "tokio", "config", "log", "simple_logger", "schemars", "chrono", "axum", "hyper", "tower", "tower-http", "http", "http-body-util", "utoipa", "utoipa-swagger-ui", "utoipa-redoc", "utoipa-rapidoc", "axum-insights", "tracing"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "wee_alloc", "js-sys"]

force-rebuild = ["rtz-build/force-rebuild"]

[dependencies]
rtz-core = { path = "../rtz-core", version = "0.1.6"}

anyhow = { version = "1", features = ["backtrace"] }
rayon = "1"
geojson = "1"
geo = "0.33"
chashmap = "2"

rand = "0.10"
getrandom = { version = "0.4", features = ["wasm_js"] }

serde = { version = "1" }
serde_json = "1"

bincode = { version = "2", default-features = false, features = ["alloc", "serde"] }
include_bytes_aligned = { version = "0.1", optional = true }

# cli
clap = { version = "4", features = ["derive"], optional = true }

# tz-osm
chrono-tz ={ version = "0.10", features = ["serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# web
tokio = { version = "1", features = ["rt", "macros", "signal", "parking_lot", "rt-multi-thread"], optional = true }
config = { version = "0.15", optional = true }
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
simple_logger = { version = "5", optional = true }
schemars = { version = "1", features = ["chrono04"], optional = true }
axum = { version = "0.8", features = ["macros"], optional = true }
hyper = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.7", features = ["full"], optional = true }
http = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"], optional = true }
utoipa-redoc = { version = "6", features = ["axum"], optional = true }
utoipa-rapidoc = { version = "6", features = ["axum"], optional = true }

# telemetry
axum-insights = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }

# wasm
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1"
cities-json = "0.6"
futures = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
rtz-build = { path = "../rtz-build", version = "0.2.9"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
zip = { version = "8" }

[[bench]]
name = "benches"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm)', 'cfg(coverage_nightly)'] }