[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Only for `resort-admins`, which rewrites the committed bincodes in place and
# therefore needs the codecs that define their layout.
rtz-core = { path = "../rtz-core", features = ["self-contained", "admin-osm"] }
